--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 :root {
   --main-dark: #14110f;
+  --light-red: #db4747;
+  --light-grey: rgb(190, 190, 190);
 }
 
 * {
@@ -38,6 +40,10 @@ body {
   text-underline-position: below;
 }
 
+.name {
+  color: #db4747;
+}
+
 .logo {
   margin-right: auto;
 }
@@ -45,69 +51,49 @@ body {
 #logo {
   position: absolute;
   width: 400px;
-  top: 5%;
+  top: 15%;
   right: 10%;
 }
 
-.name {
-  color: #db4747;
-}
-
-#logo path:nth-of-type(1),
-path:nth-of-type(2),
-path:nth-of-type(7),
-path:nth-of-type(8),
-path:nth-of-type(9),
-path:nth-of-type(10),
-path:nth-of-type(11),
-path:nth-of-type(12),
-path:nth-of-type(13),
-path:nth-of-type(14),
-path:nth-of-type(15) {
+.white-fill path,
+.white-fill rect {
   fill: white;
   stroke-width: 1px;
-  stroke: #ffffff;
-
-  stroke-dasharray: 2020px;
+  stroke: white;
+  stroke-dasharray: 1514px;
   stroke-dashoffset: 0px;
 }
 
-#logo:hover path {
-  animation: animate-icon 2s ease forwards;
-}
+.grey-fill path {
+  fill: var(--light-grey);
 
-@keyframes animate-icon {
-  0% {
-    stroke-dashoffset: 0;
-    fill: white;
-  }
-  40% {
-    stroke-dashoffset: 2020px;
-  }
-  80% {
-    stroke-dashoffset: 4040px;
-  }
-  100% {
-    stroke-dashoffset: 4040px;
-    fill: transparent;
-  }
-}
-
-#logo path:nth-of-type(3),
-#logo path:nth-of-type(5) {
-  fill: transparent;
-  stroke: #db4747;
   stroke-width: 1px;
-  stroke-dasharray: 369px;
+  stroke: var(--light-grey);
+
+  stroke-dasharray: 317px;
   stroke-dashoffset: 0px;
 }
 
-#logo path:nth-of-type(3) {
-  animation: animate-icon-red 2s linear forwards;
+.red-fill path {
+  /* fill: rgb(224, 53, 53); */
+  fill: transparent;
+  stroke: var(--light-red);
+  stroke-width: 1px;
+  stroke-dasharray: 277px;
+  stroke-dashoffset: 0px;
 }
 
-#logo path:nth-of-type(5) {
-  animation: animate-icon-red 2s linear forwards 1s;
+.white-fill:hover path,
+.white-fill:hover rect {
+  animation: animate-icon 2s linear forwards;
+}
+
+.grey-fill:hover path {
+  animation: grey-fill-animation 2s linear forwards;
+}
+
+.red-fill path {
+  animation: animate-icon-red 2 linear forwards 1s;
 }
 
 @keyframes animate-icon-red {
@@ -115,15 +101,47 @@ path:nth-of-type(15) {
     stroke-dashoffset: 0;
   }
   40% {
-    stroke-dashoffset: 369px;
+    stroke-dashoffset: 277px;
   }
   80% {
-    stroke-dashoffset: 738px;
+    stroke-dashoffset: 554px;
     fill: transparent;
   }
   100% {
-    stroke-dashoffset: 738px;
-    fill: #db4747;
+    stroke-dashoffset: 554px;
+    fill: var(--light-red);
+  }
+}
+
+@keyframes grey-fill-animation {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  40% {
+    stroke-dashoffset: 317px;
+  }
+  80% {
+    stroke-dashoffset: 634px;
+  }
+  100% {
+    stroke-dashoffset: 634px;
+    fill: transparent;
+  }
+}
+
+@keyframes animate-icon {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  40% {
+    stroke-dashoffset: 1514px;
+  }
+  80% {
+    stroke-dashoffset: 3028px;
+  }
+  100% {
+    stroke-dashoffset: 3028px;
+    fill: transparent;
   }
 }
 
